# physics_engine

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  architecture.drawio
architecture/: architecture.drawio
include/: EventState.h  Kinematics.h  KinematicsData.h  Settings.h
include/data_containers/: EventState.h  Settings.h
include/data_types/: KinematicsData.h
include/glad/: glad.h
include/libraries/: ControllerLib.h  KinematicsLib.h
include/libraries/controllers/: pid.h
include/libraries/kinematics/: AircraftKinematics.h  UnderwaterVehicleKinematics.h  Utilities.h
include/qt_application/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
resources/entity_kinematics/: aerosonde_kinematics.json  blueROV2_kinematics.json  generalAUV.json  generalAircraft.json  generalAircraft2.json
resources/meshes/: BlueROV2Heavy.stl  drone-Frame.stl
resources/shaders/: fragment_shader.glsl  simple_vertex_shader.glsl  terrain_fragment_shader.glsl  terrain_geometry_shader.glsl  terrain_vertex_shader.glsl
shaders/: fragment_shader.glsl  fragment_shader_basic2.glsl  terrain.fs  vertex_shader.glsl
sources/: Axes.cpp  Axes.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Cube.cpp  Cube.h  EventHandling.cpp  EventHandling.h  ShaderHandler.cpp  ShaderHandler.h  Triangle2D.cpp  Triangle2D.h  Window.cpp  Window.h  glad.c
sources/application/: Camera.cpp  Camera.h  Context.cpp  EventHandler.cpp  EventHandler.h  GuiSettings.cpp  ResourceHandler.cpp  ResourceHandler.h  Window.cpp  Window.h
sources/application_utilities/: Clock.cpp  Clock.h  Context.cpp  Context_h.txt  EventHandler_cpp.txt  GuiSettings_h.txt  QtSignalMapper.cpp  QtSignalMapper.h  ResourceHandler.cpp  ResourceHandler.h
sources/data_plotter/: DataPlotter.cpp  DataPlotter.h
sources/entity/: Entity.cpp  Entity.h
sources/entity/entity_utilities/: Kinematics.cpp  Kinematics.h  PidController.cpp
sources/objects/: Axes.cpp  Axes.h  Drone.cpp  Drone.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  Terrain.cpp  Terrain.h
sources/shapes/: Cube.cpp  Cube.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  StlMesh.cpp  StlMesh.h  Triangle.cpp  Triangle.h
sources/simulation_core/: SimulationCore.cpp  SimulationCore.h
sources/tools/: Camera.cpp  Camera.h  Clock.cpp  Clock.h  Context.cpp  Context.h  EventHandler.cpp  EventHandler.h  GuiSettings.cpp  GuiSettings.h  Kinematics.cpp  Kinematics.h  Light.cpp  Light.h  PidController.cpp  PidController.h  ResourceHandler.cpp  ResourceHandler.h  ShaderHandler.cpp  ShaderHandler.h  Window.cpp  Window.h
sources/visualizer/: Visualizer.cpp  Visualizer.h
sources/visualizer/objects/: Axes.cpp  Axes.h  Floor.h  Terrain.h
sources/visualizer/shapes/: Cube.cpp  Cube.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  StlMesh.h  Triangle.cpp
sources/visualizer/visualizer_utilities/: Camera.cpp  Light.h  ShaderHandler.cpp  ShaderHandler.h
